# citysense

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.ps1
backend/: CLAUDE.md
backend/agents/: CLAUDE.md  comment_analysis.py
backend/alembic/: env.py
backend/api/: CLAUDE.md  auth.py  deps.py  lifespan.py  main.py
backend/brightdata/: test_sdk.py
backend/core/: CLAUDE.md  README.md  growth_learning_helpers.py  growth_progress.py  growth_service.py  growth_service_helpers.py  redis_client.py
backend/data/: analysis_metrics.jsonl  analysis_results.json  career_agent_context_audit.json  hamza_cv_audit.json
backend/db/: CLAUDE.md  crud.py  crud_admin.py  crud_citizen.py  models.py  session.py
backend/scripts/: benchmark_career_agent.py  create_tables.py  seed_admin.py  seed_converters.py  seed_from_json.py  upload_prompts_to_langfuse.py
backend/tests/: cv_test_helpers.py  test_api_caching.py  test_api_caching_miss.py  test_api_endpoints.py  test_bright_data_client.py  test_career_analyze.py  test_career_chat.py  test_career_context_prefix.py  test_career_intent.py  test_citizen_chat_api.py  test_cv_api.py  test_cv_crud.py  test_cv_job_status.py  test_cv_pipeline.py  test_cv_schemas.py  test_cv_stream.py  test_growth_crud_path_update.py  test_growth_guide_integration.py  test_growth_handler.py  test_growth_pipeline_integration.py  (+17 more)
docs/: 2026-03-11-cv-pipeline-bugfixes-report.md  2026-03-12-devops-infrastructure-bugfixes.md  langfuse-observability-guide.md
frontend/: package-lock.json  package.json  vite.config.ts
(+233 files in other folders)
